--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
+  <header>
+    <ul>
+      <li>Home</li>
+      <li>World</li>
+      <li>Tech</li>
+      <li>Design</li>
+      <li>Culture</li>
+    </ul>
+  </header>
   Hello World
   <script src="src/app.js"></script>
 </body>
