--- a/index.html
+++ b/index.html
@@ -18,7 +18,32 @@
       <li>Culture</li>
     </ul>
   </header>
-  Hello World
+  <div class="article-container">
+    <article class="article">
+      <img src="https://cdn.pixabay.com/photo/2020/09/23/19/58/ghost-5596921_960_720.jpg" alt="">
+      <div class="content">
+        <h1>Article 1</h1>
+        <p>Donec id elit non mi porta gravida at eget metus.Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+        <a href="#">View Drtails</a>
+      </div>
+    </article>
+    <article class="article">
+      <img src="https://cdn.pixabay.com/photo/2019/10/28/21/21/halloween-4585684_960_720.jpg" alt="">
+      <div class="content">
+        <h1>Article 2</h1>
+        <p>Donec id elit non mi porta gravida at eget metus.Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna molls euismod.Donec sed odio dui, Donec id elit non mi portagravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.Donec id elit non mi porta gravida at eget metus.Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.</p>
+        <a href="#">View Drtails</a>
+      </div>
+    </article>
+    <article class="article">
+      <img src="https://cdn.pixabay.com/photo/2020/10/24/03/10/pottery-5680464__340.jpg" alt="">
+      <div class="content">
+        <h1>Article 3</h1>
+        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis inegestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <a href="#">View Drtails</a>
+      </div>
+    </article>
+  </div>
   <script src="src/app.js"></script>
 </body>
 </html>
