left and right body

--- a/index.html
+++ b/index.html
@@ -18,6 +18,28 @@
       <li>Culture</li>
     </ul>
   </header>
+  <aside class="left-aside">
+    <div class="left-container">
+      <h2>About</h2>
+      <p>Etiam porta semmalesuada magna mollis euismod.Cras mattis consectetur purus sit amet fermentum.Aeneanlacinia bibendum nulla sed consectetur.</p>
+      <h3>Archives</h3>
+      <ul>
+        <li><a href="#">Jan 2020</a></li>
+        <li><a href="#">Dec 2019</a></li>
+        <li><a href="#">Nov 2020</a></li>
+      </ul>
+    </div>
+  </aside>
+  <aside class="right-aside">
+    <div class="sign-in-container">
+      <div class="email-password">
+        <input type="text" placeholder="Email Address" class="email">
+        <input type="password" placeholder="Password" class="password">
+      </div>
+      <div class="remember-me"><input type="checkbox">Remember me</div>
+      <input type="button" value="Sign in" class="sign-in-button">
+    </div>
+  </aside>
   <div class="article-container">
     <article class="article">
       <img src="https://cdn.pixabay.com/photo/2020/09/23/19/58/ghost-5596921_960_720.jpg" alt="">
