--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
       </div>
     </article>
   </div>
+  <footer class="footer">
+    <p>Advanced CSS homework built by <a href="#">@Your Name</a>.</p>
+    <p><a href="#">Back to top</a></p>
+  </footer>
   <script src="src/app.js"></script>
 </body>
 </html>
